tests/ui/explicit_span_range.stderr
error: explicit SpanRange
 --> tests/ui/explicit_span_range.rs:4:22
  |
4 | explicit_span_range!(one, two, three, four);
  |                      ^^^^^^^^^^^^^^^
